# electric_bus_navigation

./: README.md
.github/workflows/: ci.yml
docs/: TEST_CASES.md  architecture.md
firmware/bootloader/: ab_slot.c  rolling_ota.md
firmware/primary/: Makefile  project.yml
firmware/primary/include/: health_report.h  long_control.h
firmware/primary/src/: health_report.c  long_control.c
firmware/primary/test/: test_cases.c  test_health_report.c  test_long_control.c
firmware/primary/tools/: gen_runner.py
firmware/safety_monitor/: project.yml
firmware/safety_monitor/include/: takeover_fsm.h
firmware/safety_monitor/src/: takeover_fsm.c
firmware/safety_monitor/test/: test_cases.c  test_takeover_fsm.c
ros2_ws/src/bus_behavior_planner/: CMakeLists.txt  package.xml
ros2_ws/src/bus_behavior_planner/include/bus_behavior_planner/: behavior_fsm.hpp
ros2_ws/src/bus_behavior_planner/launch/: bus.launch.py
ros2_ws/src/bus_behavior_planner/src/: behavior_fsm.cpp  behavior_node.cpp
ros2_ws/src/bus_behavior_planner/test/: test_behavior_fsm.cpp
ros2_ws/src/bus_diagnostics/: CMakeLists.txt  package.xml
ros2_ws/src/bus_diagnostics/src/: diag_aggregator.cpp
scenarios/: scenario_manifest.yaml
scripts/: run_scenarios.py
