<?xml version="1.0"?>
<package format="3">
  <name>bus_behavior_planner</name>
  <version>1.0.0</version>
  <description>Behavior FSM for urban intersections: traffic lights, pedestrians, cut-ins</description>
  <maintainer email="dev@example.com">Bus Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
